# EyeTrackingAlgroithms

./: .gitignore  LoadAnderssonData.py  README.md  constants.py  playground.py  pyproject.toml  run_pipelines.py
Analysis/: Analyzer.py  BaseAnalyzer.py  DetectorComparisonCalculator.py  DetectorContrastCalculator.py  EventMatcher.py  PreProcessor.py  comparisons.py  detector_comparison__lund2013.py  figures.py  helpers.py  lund2013.ipynb  lund2013_analysis_helpers.py  metrics.py  playground.py  playground__detector_comparison.py  run_pipeline.py  run_pipelines.py  scarfplot.py
Config/: constants.py  experiment_config.py  helpers.py
DataParsers/: BaseEyeTrackerParser.py
DataSetLoaders/: BaseDataSetLoader.py  DataSetFactory.py  GazeComDataSetLoader.py  HFCDataSetLoader.py  IRFDataSetLoader.py  Lund2013DataSetLoader.py
Detectors/: BaseDetector.py  EngbertDetector.py  IDTDetector.py  IVTDetector.py  NHDetector.py
GazeDetectors/: BaseDetector.py  EngbertDetector.py  IDTDetector.py  IVTDetector.py  NHDetector.py  REMoDNaVDetector.py
GazeEvents/: BaseEvent.py  BaseGazeEvent.py  BlinkEvent.py  EventFactory.py  EventMatcher.py  EventMatching.py  FixationEvent.py  PSOEvent.py  SaccadeEvent.py  SmoothPursuitEvent.py  helpers.py
MetricCalculators/: DetectorContrastCalculator.py  EventMatching.py  LevenshteinDistance.py  LevenshteinDistanceCalculator.py  TransitionMatrix.py  TransitionMatrixCalculator.py  levenshtein_distance.py  transition_matrix.py
Metrics/: levenshtein_distance.py  transition_matrix.py
ProjectTAV/: Subject.py  TavParticipant.py  tav_helpers.py  (+2 more)
(+144 files in other folders)
